--- a/src/home.html
+++ b/src/home.html
@@ -1,15 +1,47 @@
 <!DOCTYPE html>
-<html lang="en">
-	@@include('html/_head.htm',{
-	"title":"HomePage"
-	})
-	<body>
-		<div class="wrapper">
-			@@include('html/_header.htm',{})
-			<main class="page">
-			</main>
-			@@include('html/_footer.htm',{})
-		</div>
-		@@include('html/_js.htm',{})
-	</body>
+<html lang="ru">
+
+<head>
+	<title>Quiz</title>
+	<meta charset="UTF-8">
+	<meta name="format-detection" content="telephone=no">
+	<!-- <style>body{opacity: 0;}</style> -->
+	<link rel="stylesheet" href="css/style.min.css">
+	<link rel="shortcut icon" href="favicon.ico">
+	<!-- <meta name="robots" content="noindex, nofollow"> -->
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
+
+<body>
+	<div class="wrapper">
+		<main class="page">
+			<div class="page__container">
+				<div class="page__about about">
+					<h1 class="about__title">Подберём вуз мечты</h1>
+					<p class="about__description">about bla</p>
+					<img src="@img/quiz-img.png" alt="img">
+				</div>
+				<div class="page__quiz quiz hidden" id="quiz">
+					<div class="quiz__total"></div>
+					<div class="quiz__content">
+						<h3 class="quiz__title">Вопрос</h3>
+						<ul class="quiz__list">
+
+
+						</ul>
+					</div>
+					<div class="quiz__controls">
+						<button type="button" class="quiz__prev-btn" disabled>Back</button>
+						<button type="button" class="quiz__next-btn" disabled>Next</button>
+					</div>
+				</div>
+			</div>
+			<div class="warning hidden">
+				<p>Ops something go wrong</p>
+			</div>
+		</main>
+	</div>
+	@@include('html/_js.htm',{})
+</body>
+
 </html>
